* Added the getFirstService convenience method to ProxyManager.
* Moved tracker and enabled group code from txlbWeb.tac into
LoadBalancedService.proxiesFactory.
* Updated the ProxyHost model with attributes that could be useful in the near
future.
* Corrected a comment in txlbWeb.tac.
* Updated setupProxyServices to use the new API.
* Fixed typo in a comment.
* Updated TODO with notes from Glyph.

2008.06.26 oubiwann

* Found the bug documented in ticket #242868
(https://bugs.launchpad.net/txloadbalancer/+bug/242868).
* Removed debugging print statements.
* Removed the bug from the TODO.
* Started fleshing out the txlbWeb.tac some more.
* Updated the TODO with some next steps in this exploration.
* Renamed some of the host tracking attributes to reflect their use better.
* Fixed a bug in the task manager config.
* Consolidated the code in HostTracking.getStats.
* Added failure tracking.
* Removed redundant datestamps from log calls.
* Added ProxyHost, ProxyGroup, and ProxySerivce classes for use with
ProxyManager (elminating the need for mixing application configuration with
library code).
* Added methods to ProxyManager for getting services, groups, and hosts.
* Defined some exceptions.
* Moved tracker and listener creation into a factory.
* Moved the Proxy* classes into a new model module.
* Filled in services.configuredProxyManagerFactory.
* Cleaned up util.splitHostPort.
* Fixed up the HostTracking class to not use configuration directly, but to use
the model classes instead.
* Fixed broken logic in services.setupProxyServices.
* Updated the bad host checker to use the new API.
* Added proxy.TrackerMixin for use by Proxy and ReceiverFactory.

2008.06.25 oubiwann

* Added tests for HostTracking class.
* Added notes to the architecture doc about the relationship of the proxy
classes to one another.
* Added notes to the architecture doc about who talks to who in the proxy
module.
* Added a stub for a read-only admin UI page.